--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@headlessui/vue": "^1.7.16",
+    "@heroicons/vue": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.7",
     "@vitejs/plugin-vue": "^4.5.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
