--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "vue": "^3.3.8",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
